src/style.css
/* general styling */
@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@400;700&display=swap');

@keyframes bgSlide
{
  from { background-position-x: 0vh; }
  to   { background-position-x: var(--background-dots-size); }
}

body
{
  --background-color: #333333;
  --background-dots-size: 40vh;
  --accent-color: #f07700;
  --css-accent-color: invert(52%) sepia(63%) saturate(2989%) hue-rotate(4deg) brightness(97%) contrast(104%);
  --mobile-side-margin: 20px;
  --btn-color-fade: 0.1s;
  --btn-img-border: 10px;

  --index-mobile-btn-size: min(100px, 17.5vw);
  --index-desktop-btn-size: 150px;
  --index-icon-size: 60%;

  --wide-btn-mobile-icon-size: 40px;
  --wide-btn-icon-margin: 10px;

  margin: 0;
  width: 100vw;
  height: 100vh;
  display: grid;
  align-items: center;
  justify-content: center;
  font-family: 'Kanit', sans-serif;
  background-color: var(--background-color);
  overflow-x: hidden;
}
p, a, h1, h2, h3
{
  color: white;
  text-decoration: none;
}
h1
{
  font-size: min(3em, 7.5vw);
}
h2
{
  font-size: 2.5em;
}
h3
{
  margin-top: 15px;
  margin-bottom: 15px;
  font-size: min(1.5em, 4.5vw);
}
p
{
  font-size: 1.125em;
  font-weight: 400;
}
.main-div
{
  margin-left: var(--mobile-side-margin);
  margin-right: var(--mobile-side-margin);
  text-align: center;
}



/* dotted background styling */
.dotted-background
{
  position: absolute;
  width: 100%;
  height: var(--background-dots-size);
  bottom: 0;
  left: 0;
  background-image: url("./images/background.svg");
  background-size: contain;
  animation: 10s linear infinite running bgSlide;
  z-index: -1;
}
*:not(.dotted-background)
{
  z-index: 1;
}



/* wide button styling */
.wide-btn-container
{
  display: grid;
  align-items: center;
  grid-template-columns: 1fr 1fr;
  grid-gap: var(--mobile-side-margin);
}
.wide-btn
{
  display: grid;
  grid-template-columns: calc(var(--wide-btn-mobile-icon-size) + var(--wide-btn-icon-margin) * 2) 1fr;
  align-items: center;
  justify-content: center;
  height: 100%;
  text-align: left;
  border-radius: var(--btn-img-border);
  background-color: var(--accent-color);
  transition-duration: var(--btn-color-fade);
}
.wide-btn img, .return-btn img
{
  width: var(--wide-btn-mobile-icon-size);
  margin-left: var(--wide-btn-icon-margin);
}
.wide-btn h3, .return-btn h3
{
  margin-right: 10px;
}



/* return button styling */
.return-btn
{
  position: absolute;
  display: grid;
  grid-template-columns: calc(var(--wide-btn-mobile-icon-size) + var(--wide-btn-icon-margin) * 2) 1fr;
  align-items: center;
  text-align: left;
  top: var(--mobile-side-margin);
  left: var(--mobile-side-margin);
  width: 200px;
  border-radius: var(--btn-img-border);
  background-color: var(--accent-color);
  transition-duration: var(--btn-color-fade);
  z-index: 2;
}
.return-btn:hover, .wide-btn:hover
{
  background-color: white;
  transition-duration: var(--btn-color-fade);
}
.return-btn:hover h3, .wide-btn:hover h3
{
  color: var(--accent-color);
  transition-duration: var(--btn-color-fade);
}
.return-btn:hover img, .wide-btn:hover img
{
  color: var(--accent-color);
  filter: var(--css-accent-color);
  transition-duration: var(--btn-color-fade);
}



/* index styling */
.index-box-container
{
  position: relative;
  display: grid;
  align-items: center;
  grid-template-columns: 1fr 1fr 1fr;
  text-align: center;
  left: 50%;
  transform: translateX(-50%);
}
.index-btn
{
  position: relative;
  display: inline-block;
  width: var(--index-mobile-btn-size);
  height: var(--index-mobile-btn-size);
  text-decoration: none;
  background-color: var(--accent-color);
  border-radius: 100%;
  transition-duration: var(--btn-color-fade);
}
.index-btn:hover
{
  color: var(--accent-color);
  background-color: white;
  transition-duration: var(--btn-color-fade);
}
.index-btn:hover img
{
  filter: var(--css-accent-color);
  transition-duration: var(--btn-color-fade);
}
.index-btn img
{
  position: relative;
  width: var(--index-icon-size);
  top: 50%;
  transform: translateY(-50%);
}



/* project styling */
.proj-title-container
{
  display: grid;
  align-items: center;  
  grid-gap: calc(var(--mobile-side-margin) * 2);
}
.project-img
{
  position: relative;
  width: min(100%, 300px);
  left: 50%;
  transform: translateX(-50%);
  border-radius: var(--btn-img-border);
}



@media screen and (min-width: 900px)
{
  h1
  {
    font-size: 4em;
  }
  h2
  {
    font-size: 3em;
  }
  h3
  {
    font-size: 2em;
  }
  p
  {
    font-size: 1.5em;
  }
  .main-div
  {
    width: 750px;
  }
  .index-btn
  {
    width: var(--index-desktop-btn-size);
    height: var(--index-desktop-btn-size);
  }
  .proj-title-container
  {
    grid-template-columns: 1fr 1fr;
    text-align: left;
  }
  .project-img
  {
    width: 100%;
  }
}

